Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <li><p>The resulting scenarios are intended to help prompt changes to model assumptions, management alternatives and the limits of concern, after which the analysis can be run again. The scenarios help iteratively build understanding of the problem at hand.</p></li>
 </ul>
 
-<p><img src="./ga3.png" alt="Crossover point scenario method"></p>
+<p><img src="https://github.com/josephguillaume/crossover/blob/master/ga3.png?raw=true" alt="Crossover point scenario method"></p>
 
 <h2>
 <a id="when-is-this-method-applicable" class="anchor" href="#when-is-this-method-applicable" aria-hidden="true"><span class="octicon octicon-link"></span></a>When is this method applicable?</h2>
@@ -75,10 +75,10 @@
 <a id="excel-add-in" class="anchor" href="#excel-add-in" aria-hidden="true"><span class="octicon octicon-link"></span></a>Excel add-in</h3>
 
 <ul>
-<li>xlam file (<a href="./CrossoverAddon.xlam">CrossoverAddon.xlam</a>)</li>
+<li>xlam file (<a href="https://github.com/josephguillaume/crossover/blob/master/CrossoverAddon.xlam?raw=true">CrossoverAddon.xlam</a>)</li>
 <li>
-<a href="./CrossoverAddon%20howto.docx">Howto</a> for use of the add-in</li>
-<li>Demo using comparison of water footprints of two diets (<a href="./change%20in%20diet%20footprint%20crossover%20example.xlsx">change in diet footprint crossover example.xlsx</a>)</li>
+<a href="https://github.com/josephguillaume/crossover/blob/master/CrossoverAddon%20howto.docx?raw=true">Howto</a> for use of the add-in</li>
+<li>Demo using comparison of water footprints of two diets (<a href="https://github.com/josephguillaume/crossover/blob/master/change%20in%20diet%20footprint%20crossover%20example.xlsx?raw=true">change in diet footprint crossover example.xlsx</a>)</li>
 </ul>
 
 <h3>
