Link to WDRG webpage

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <hr>
 
         <section id="main_content">
-          <p>Quick link to <a href="#tools">tools</a></p>
+          <p>More information: <a href="http://wdrg.fi/people/joseph-guillaume/">Joseph Guillaume</a><br/>
+            Quick link to <a href="#tools">tools</a></p>
 
 <h2>
 <a id="what-is-a-crossover-point-scenario" class="anchor" href="#what-is-a-crossover-point-scenario" aria-hidden="true"><span class="octicon octicon-link"></span></a>What is a crossover point scenario?</h2>
